Fix custom db mgt column editor button wrapping issue

--- a/Stylesheets/src/Neptune/Pages/Application/page--custom-db-mgt.scss
+++ b/Stylesheets/src/Neptune/Pages/Application/page--custom-db-mgt.scss
@@ -120,6 +120,14 @@
 				}
 			}
 		}
+
+		.columns {
+			.type-table-column {
+				.actions {
+					white-space: nowrap;
+				}
+			}
+		}
 	}
 }
 
